[package]
name = "test1"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite="0.27.0"

[stable-x86_64-unknown-linux-gnu]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[build-dependencies]
winres = "0.1"
image = "0.21.1"
